--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "esModuleInterop": true,                        
     "skipLibCheck": true,                           
     "forceConsistentCasingInFileNames": true,
-    "outDir": "build"
+    "outDir": "build",
+    "declaration": true
   },
   "exclude": [
     "node_modules"
