--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "author": "Taylor Coons <TaylorCoons8798@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^15.12.1"
   },
   "scripts": {
     "test": "yarn jest",
     "build": "yarn tsc"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.22",
+    "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.4"
