--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "skipLibCheck": true,                           
     "forceConsistentCasingInFileNames": true,
     "outDir": "build",
-    "declaration": true
+    "declaration": true,
+    "types": ["node"]
   },
   "exclude": [
     "node_modules"
