--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,13 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "build",
     "declaration": true,
-    "types": ["node"]
+    "types": ["node", "jest"]
   },
   "exclude": [
     "node_modules"
   ],
   "include": [
     "src/**/*.ts",
+    "test/**/*.ts"
   ]
 }
